<resources>
    <string name="app_name">My Sky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_sky">My Sky</string>
    <string name="boarding_description">Helps you to easily get the full weather forecasts and the experts alerts to keep you safe!</string>
    <string name="get_started">Get started</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="today">Today</string>
    <string name="week_forecasts"><![CDATA[7-Day forecasts >]]></string>
</resources>