<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.home_screen.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Good Morning!" />

            <TextView
                android:id="@+id/tv_cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                tools:text="El Mahalla El Kubra" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_round_location_on_24"
                app:layout_constraintBottom_toBottomOf="@id/tv_cityName"
                app:layout_constraintEnd_toStartOf="@id/tv_cityName"
                app:layout_constraintTop_toTopOf="@id/tv_cityName"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_regionCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cityName"
                tools:text="Al Gharbiyah - Egypt" />

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_regionCountry">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/current_blurView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:blurOverlayColor="@color/color_blur">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/tv_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_60ssp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="22°" />

                        <ImageView
                            android:id="@+id/iv_weatherImage"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_100sdp"
                            android:layout_marginTop="-50dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_temp"
                            tools:src="@drawable/logo" />

                        <TextView
                            android:id="@+id/tv_condetion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_gray"
                            android:textSize="@dimen/_20ssp"
                            app:layout_constraintStart_toEndOf="@id/iv_weatherImage"
                            app:layout_constraintTop_toBottomOf="@id/tv_temp"
                            tools:text="Mostly Clear" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </eightbitlab.com.blurview.BlurView>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/detailsCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/mainCardView">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/details_blurView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:blurOverlayColor="@color/color_blur">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:src="@drawable/pressure" />

                            <TextView
                                android:id="@+id/tv_pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_14ssp"
                                tools:text="30.1%" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure"
                                android:textColor="@color/light_gray"
                                android:textSize="@dimen/_14ssp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:src="@drawable/water" />

                            <TextView
                                android:id="@+id/tv_humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_14ssp"
                                tools:text="52%" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textColor="@color/light_gray"
                                android:textSize="@dimen/_14ssp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:src="@drawable/wind" />

                            <TextView
                                android:id="@+id/tv_wind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_14ssp"
                                tools:text="12 km/h" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textColor="@color/light_gray"
                                android:textSize="@dimen/_14ssp" />

                        </LinearLayout>

                    </LinearLayout>

                </eightbitlab.com.blurview.BlurView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/today"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailsCardView" />

            <TextView
                android:id="@+id/tv_seeWeekForecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/week_forecasts"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailsCardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hours_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_today" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_sun"
        app:lottie_speed="1.5" />

</androidx.constraintlayout.widget.ConstraintLayout>